tests/paczka2/big_fuzzy/17464223.err
Error in line 2: MKO3ViPzc2P S118 97,8
Error in line 18: tHXQv S645 59,5
Error in line 19: tHXQv A904 13,6
Error in line 33: OjDi S46 82,8
Error in line 15: MKO3ViPzc2P A904 11,8
Error in line 37: OjDi S645 53,3
Error in line 40: tHXQv S118 11,7
Error in line 59: MKO3ViPzc2P S118 96,8
Error in line 66: MKO3ViPzc2P S46 -1,6
Error in line 61: x4E S118 24,8
Error in line 71: x4E S645 55,5
Error in line 80: OjDi S118 20,9
Error in line 82: S118 S645 53,4
Error in line 62: MKO3ViPzc2P S46 9,1
Error in line 89: OjDi S46 14,2
Error in line 69: 16o8xCX S645 6,4
Error in line 101: OjDi S645 51,1
Error in line 122: x4E S645 40,0
Error in line 123: x4E S46 73,5
Error in line 125: S118 S645 206,3
Error in line 128: S118 S46 82,9
Error in line 135: 16o8xCX S46 21,4
Error in line 129: S118 S645 2,9
Error in line 138: S118 S118 16,0
Error in line 132: x4E A904 9,3
Error in line 141: x4E S46 14,6
Error in line 147: 6VnQ A904 1,6
Error in line 157: x4E S118 69,3
Error in line 165: x4E S645 77,7
Error in line 182: MKO3ViPzc2P A904 69,76
Error in line 194: S118 S118 5,5
Error in line 192: tHXQv S645 68,2
Error in line 201: x4E S4. 14,5
Error in line 181: MKO3ViPzc2P A904 56,1
Error in line 215: S118 S46 51,8
Error in line 209: 16o8xCX S118 27,5
Error in line 224: S118 S46 24,4
Error in line 213: tHXQv S118 158,6
Error in line 232: MKO3ViPzc2P A904 76,8
Error in line 242: tHXQv S645 50,68
Error in line 240: S118 S645 92,8
Error in line 249: MKO3ViPzc2P S46 46,89
